# projeto_lp3

./: pyproject.toml
project_lp3/: app.py  cpf.py
projeto_lp3/: app.py  cpf.py
static/: style.css
templates/: base.html  base2.html  cadastro_produto.html  como-utilizar.html  contato.html  gerar-cnpj.html  gerar-cpf.html  home.html  politica-de-privacidade.html  produtos.html  termos.html
