[tool.poetry]
name = "projeto-lp3"
version = "0.1.0"
description = ""
authors = ["Gabriel Martins Rocha <gmrgabriel1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
validate-docbr = "^1.10.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
